Fixed button visibility

--- a/figma-to-code/styles/components/button.css
+++ b/figma-to-code/styles/components/button.css
@@ -2,7 +2,40 @@ button {
 	cursor: pointer;
 }
 
+button.outline.large.rounded {
+	align-items: center;
+	border-radius: 5px;
+	padding: 8px 22px;
+	height: 35px;
+	border: 1px solid var(--primary);
+	background-color: var(--ink);
+	
+	font-weight: 500;
+	font-size: var(--font-med);
+	line-height: 19px;
+	text-align: center;
+	letter-spacing: 0.46px;
+	height: 35px;
+	color: var(--primary);
+}
 
+button.contained.large.rounded {
+	align-items: center;
+	max-width: 89px;
+	border-radius: 5px;
+	padding: 8px 22px;
+	height: 35px;
+	background-color: var(--primary);
+	border: none;
+	
+	font-weight: 500;
+	font-size: var(--font-med);
+	line-height: 19px;
+	text-align: center;
+	letter-spacing: 0.46px;
+	height: 35px;
+	color: var(--ink);
+}
 /* - - CONTAINED LARGE SQUARE ROUNDED - - - */
 @media (min-width: 700px) {
 	button.contained.large.rounded {
