--- a/figma-to-code/styles/modules/site-header.css
+++ b/figma-to-code/styles/modules/site-header.css
@@ -55,14 +55,11 @@ nav ul {
 	.login span {
 		margin-left: 8px;
 		margin-right: 15px;
+		font-size: 15px;
 	}
 
 	.login svg {
 		max-width: 18px;
-	}
-
-	.login span {
-		font-size: 15px;
 	}
 
 	.login button.contained.medium.rounded {
