--- a/figma-to-code/styles/modules/site-header3.css
+++ b/figma-to-code/styles/modules/site-header3.css
@@ -29,6 +29,20 @@ nav ul {
 	align-items: center;
 }
 
+.template-3 .site-header button {
+	display: none;
+}
+@media (min-width: 700px) {
+
+	.template-3 .site-header mast-head button {
+		display: block;
+/*		margin-left: 15px;*/
+	}
+
+	.template-3 .site-header mast-head button.contained.large.rounded {
+		margin-left: 15px;
+	}
+}
 @media (min-width: 725px) {
 	mast-head {
 		padding: 15px 50px;
@@ -62,11 +76,6 @@ nav ul {
 
 	.login span {
 		font-size: 15px;
-	}
-
-	.login button.contained.medium.rounded {
-/*		max-width: 80px;*/
-/*		padding: 4px 18px;*/
 	}
 }
 
